[gd_scene load_steps=2 format=3 uid="uid://coopf10ag5jbe"]

[ext_resource type="Script" uid="uid://cai54hxn7uayj" path="res://scripts/settings_scene.gd" id="1_kqt80"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kqt80")

[node name="title_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_right = 31.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="settings_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -32.0
offset_right = 20.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="unicorn_row" type="HBoxContainer" parent="settings_container"]
layout_mode = 2

[node name="unicorn_label" type="Label" parent="settings_container/unicorn_row"]
layout_mode = 2
text = "Unicorn Mode"

[node name="unicorn_toggle" type="CheckBox" parent="settings_container/unicorn_row"]
layout_mode = 2

[node name="smoothing_row" type="HBoxContainer" parent="settings_container"]
layout_mode = 2
size_flags_horizontal = 8

[node name="smoothing_label" type="Label" parent="settings_container/smoothing_row"]
layout_mode = 2
text = "Antialiasing"

[node name="smoothing_toggle" type="CheckBox" parent="settings_container/smoothing_row"]
layout_mode = 2

[node name="restore_button" type="Button" parent="settings_container"]
layout_mode = 2
text = "Restore Defaults
"

[node name="back_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -48.0
offset_right = 22.5
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"
